# campus-lms-CLI

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  LICENSE  README.md  campus-lms-cli_spec.md  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml  codeql.yml  release.yml
npm/: campus-lms.js  cargo.js  platform.js  postinstall.js  prepare-prebuilt.js  sha256-file.js
npm/prebuilt/windows-x64/: campus-lms.exe.sha256
src/: auth.rs  cache.rs  cli.rs  config.rs  doctor.rs  dto.rs  error.rs  keychain.rs  lifecycle.rs  main.rs  output.rs
src/ai/: mod.rs
src/docs/: capabilities.rs  errors.rs  mod.rs
src/moodle/: api.rs  assignments.rs  calendar.rs  client.rs  courses.rs  mod.rs  models.rs  params.rs
src/schema/: mod.rs
